fixed ingredients list when screen width is under 1250px so the list does not get cut off by instructions

--- a/react-app/src/components/RecipeComponents/RecipeComponents.css
+++ b/react-app/src/components/RecipeComponents/RecipeComponents.css
@@ -312,12 +312,13 @@ div.instruction-picture-div {
 
 @media screen and (max-width: 1250px) {
     .recipe-ingredients-container {
-        position: unset;
+        position: initial;
         width: 100%;
         min-height: fit-content;
+        height: fit-content;
+        max-height: fit-content;
         transform: translate(0%);
         border: none;
-        overflow-y: hidden;
         background-color: transparent;
     }
 }
